# Lynx-Engine

./: .gitignore  CMakeLists.txt  README.md  run.bat
LynxMath/: LynxMatrix.cpp  LynxMatrix.h  LynxVector.cpp  LynxVector.h
assets/shader/: standard.vs
cmake/: generic_sources.cmake  include_generic.cmake  include_win32.cmake  platform_libraries.cmake  platform_sources.cmake  win32_sources.cmake
include/: Config.h  Enums.h  Event.h  LynxWindow.h  Window.h
include/GL/: GL.hpp
include/Platform/: LinuxWindow.h  MacOSWindow.h  TemplateWindow.h  Win32Window.h
include/Platform/C/: LynxWindow.h  Window.h
include/Platform/Generic/: Application.h  Path.h  Window.h
include/Platform/Windows/: WindowData.h  WindowsGLContext.h  WindowsGLDefines.h  WindowsGLExtensions.h
src/: main.cpp
src/GL/Generic/: GL.cpp
src/Platform/Darwin/: Window.cpp
src/Platform/Linux/: Window.cpp
src/Platform/MacOS/: Window.cpp
src/Platform/Template/: Window.cpp
src/Platform/Win32/: Window.cpp
src/Platform/Windows/: Application.cpp  Path.cpp  Window.cpp  WindowsGLContext.cpp
src/Startup/Generic/: Startup.cpp
src/Startup/Linux/: StartupLinux.cpp
src/Startup/Windows/: StartupWindows.cpp
src/Window/: LinuxWindow.cpp  LinuxWindow.h  MacOSWindow.cpp  MacOSWindow.h  OSXWindow.cpp  TemplateWindow.cpp  Win32Window.cpp  Win32Window.h  WindowBase.h
